readd PLONE_CSRF_DISABLED true to work with plone protect

--- a/wca.cfg
+++ b/wca.cfg
@@ -4,6 +4,9 @@ eggs +=
 zcml +=
   pas.plugins.imio
 
+environment-vars +=
+  PLONE_CSRF_DISABLED true
+
 [versions]
 imio.dashboard = 2.11
 pas.plugins.imio = 2.0.7
